<resources>
    <string name="app_name">Bom Dia Deus</string>
    <string name="notification_title">Bom Dia Deus</string>
    <string name="notification_channel_name">Versículos Diários</string>
    <string name="notification_channel_description">Notificações diárias com versículos bíblicos</string>
    <string name="search_hint">Pesquisar por data (DD/MM)</string>
    <string name="all_verses">Todos os Versículos</string>
    <string name="today_verse">Versículo de Hoje</string>
    <string name="search">Pesquisar</string>
    <string name="january">Janeiro</string>
    <string name="february">Fevereiro</string>
    <string name="march">Março</string>
    <string name="april">Abril</string>
    <string name="may">Maio</string>
    <string name="june">Junho</string>
    <string name="july">Julho</string>
    <string name="august">Agosto</string>
    <string name="september">Setembro</string>
    <string name="october">Outubro</string>
    <string name="november">Novembro</string>
    <string name="december">Dezembro</string>
    <string name="menu_home">Início</string>
    <string name="menu_calendar">Calendário</string>
    <string name="menu_settings">Configurações</string>
    <string name="no_results_found">Nenhum resultado encontrado</string>
    <string name="notification_permissions_required">É necessário permitir notificações para receber versículos diários</string>
    <string name="permission_request">Solicitar Permissão</string>
    <string name="settings">Configurações</string>
    <string name="cancel">Cancelar</string>
    <string name="daily_verse">Versículo do Dia</string>
    <string name="biblical_reference">Referência Bíblica</string>
    <string name="share">Compartilhar</string>
</resources> 