<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.example.bomdiadeus.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/calendarFragment"
        android:name="com.example.bomdiadeus.ui.calendar.CalendarFragment"
        android:label="@string/all_verses"
        tools:layout="@layout/fragment_calendar" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.example.bomdiadeus.ui.settings.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />

</navigation> 